--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-scripts": "5.0.1",
+		"react-text-mask": "^5.5.0",
 		"sass": "^1.57.1",
 		"web-vitals": "^2.1.4",
 		"yup": "^0.32.11"
@@ -45,6 +46,7 @@
 		]
 	},
 	"devDependencies": {
+		"@types/react-text-mask": "^5.4.11",
 		"@typescript-eslint/eslint-plugin": "^5.47.0",
 		"@typescript-eslint/parser": "^5.47.0",
 		"eslint": "^8.30.0",
