--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
+    "noFallthroughCasesInSwitch": false,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
@@ -21,7 +21,7 @@
       "home/*": ["./pages/Home/*"],
       "loan/*": ["./pages/Loan/*"],
       "services/*": ["./services/*"],
-      "ui/*": ["./ui-kit/*"],
+      "ui-kit/*": ["./ui-kit/*"],
       "global/*": ["./global/*"],
       "img/*": ["./img/*"],
       "mocks/*": ["./mocks/*"],
