--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.9",
 		"@types/react-redux": "^7.1.25",
+		"axios": "^1.3.0",
 		"clsx": "^1.2.1",
 		"formik": "^2.2.9",
 		"normalize.css": "^8.0.1",
