fourth fixes in module 4

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
         "prettier"
     ],
     "rules": {
+        "no-duplicate-imports": "error",
         "linebreak-style": ["off", "windows"],
         "semi": 0,
         "no-tabs": "off",
