--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
 	"private": true,
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.9.1",
-		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"@types/jest": "^27.5.2",
@@ -12,7 +11,7 @@
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.9",
 		"@types/react-redux": "^7.1.25",
-		"axios": "^1.3.0",
+		"axios": "^1.3.2",
 		"clsx": "^1.2.1",
 		"formik": "^2.2.9",
 		"normalize.css": "^8.0.1",
@@ -40,6 +39,11 @@
 			"react-app/jest"
 		]
 	},
+	"jest": {
+		"moduleNameMapper": {
+			"axios": "axios/dist/node/axios.cjs"
+		}
+	},
 	"browserslist": {
 		"production": [
 			">0.2%",
@@ -53,6 +57,7 @@
 		]
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "^5.16.5",
 		"@types/react-text-mask": "^5.4.11",
 		"@typescript-eslint/eslint-plugin": "^5.47.0",
 		"@typescript-eslint/parser": "^5.47.0",
@@ -65,6 +70,8 @@
 		"eslint-plugin-promise": "^6.1.1",
 		"eslint-plugin-react": "^7.31.11",
 		"eslint-plugin-react-hooks": "^4.5.0",
+		"jest": "^29.3.1",
+		"jest-dom": "^4.0.0",
 		"prettier": "^2.6.2",
 		"react-router-dom": "^6.6.1",
 		"typescript": "^4.9.4"
